- NEW: added the Kernel Density metric '$density' to the '$summary' table for the 'linear' method. This allows you to see how the results are ranked in regards to KDE (also added for other methods, but as an empty column)
- NEW: plot updated with title showing which Rank current plot is, and better spacing

- FIX: plot() works correctly on `auto_rate` objects (missing #' @export)
- FIX: Issue #58: `auto_rate()` stops with obscure message when input datasets are small.
- FIX: Issue #66: `auto_rate()` removed unused method argument `"default"`
- FIX: auto_rate() - Fix for plots failing where result contains an NA (fix in multi.p() involving clip)
- FIX: Fix for `auto_rate` failing to work when there were NA in the time data. (due to range() failing to return a range (returns c(NA,NA). It needs `na.rm = TRUE` or na.omit() on the data. Many other fns like sum() and mean() fail in the same way, so similar errors may occur in other places. In general data with NAs needs further testing. )
- FIX: method = "max" was missing '$total_regs' element from metadata

- CHANGE: reordered operators to put "method" second
- CHANGE: Summary table reordered to be consistent with other functions
- CHANGE: tidied and reordered summary S3 printout
  - summary table comes first, only prints out 20 rows max of results (via data.table)
  - new function (print_dens) for printing the density result more compactly


========================== convert_rate() ============================
- NEW: now converts to surface area-specific rates via the 'area' argument (acccepts 4 inputs: mm2, cm2, m2, km2)
- NEW: can now import data and output rates using 'day' as time unit e.g. "mgO2/day/m2"
- NEW: can now output oxygen used in moles e.g. "molO2/day/kg"
- CHANGE: o2.unit = NULL and time.unit = NULL now stop function instead of applying a default unit
- CHANGE: Now applies a default output unit for mass- and area specific rates as well as absolute rates.