@@ -139,13 +139,17 @@ gaps in the data.
 
 A plot is produced (provided \code{plot = TRUE}) showing the original data
 timeseries of oxygen against time, with the rate result region highlighted, a
-close-up of this region with linear model coefficients, various summary plots
-of fit and residuals, and for the \code{linear} method the results of the kernel
-density analysis. If multiple rates have been calculated, by default the
-first is plotted. Others can be plotted by changing the \code{pos} argument either
-in the main function call, or by plotting the output, e.g. \code{plot(object, pos = 2)}. In addition, each sub-panel can be examined individually by using the
-\code{choose} input, e.g. \code{plot(object, choose = 2)}. Console output messages can
-be suppressed using \code{message = FALSE}.
+close-up of this region with linear model coefficients, a rolling rate plot
+(note the reversed y-axis so that higher oxygen consumption rates are
+higher), various summary plots of fit and residuals, and for the \code{linear}
+method the results of the kernel density analysis. If multiple rates have
+been calculated, by default the first is plotted. Others can be plotted by
+changing the \code{pos} argument either in the main function call, or by plotting
+the output, e.g. \code{plot(object, pos = 2)}. In addition, each sub-panel can be
+examined individually by using the \code{choose} input, e.g. \code{plot(object, choose = 2)}. Console output messages can be suppressed using \code{message = FALSE}. The
+rate in the rolling rate plot can be plotted \emph{not} reversed by passing
+\code{rate.rev = FALSE}, for instance if examining oxygen production rates so that
+higher production rates appear higher.
 }
 
 \subsection{S3 Generic Functions}{
